--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="tr">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTFOLİO</title>
-    <link rel="stylesheet" href="style.css">
+    <title>HAKKIMIZDA</title>
+    <link rel="stylesheet" href="stylehk.css">
 </head>
-
 <body>
     <header>
         <nav>
@@ -21,9 +19,8 @@
             </div>
         </nav>
         <div class="slider"></div>
-        
-
-
+        <div class="box">
+            
         </div>
         <footer>
             ©Designed by Atill Öz
@@ -31,5 +28,4 @@
     </header>
 
 </body>
-
 </html>
