--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
                 </ul>
             </div>
         </nav>
-        <div class="slider"></div>
+        <div class="slider">
+            <div class="slidersol"><h3>
+                Sektörün yıkıcı değil, yapıcı gücüne inanıyoruz.
+            </h3>
+        <p>
+            Dijitalleşen dünyada markaların dijital pazarlama alanında yanında olmaktan mutluyuz. Bu süreçte yüzlerce markayla birlikte çalışmak ve başarılarında bir katkımız olmasının gururunu yaşıyoruz.
+                    </p>
+                    <button><a href="hakkimizda.html"> Biz Kimiz?</a></button>
+                </div>
+            <div class="slidersag">
+                <img src="selection/Ecomedya-works-1536x1024.png" alt="">
+            </div>
+            <div class="slidersag1">
+                <img src="selection/eco-works-1536x1002.png" alt="">
+            </div>
+            <div class="slidersol1">
+                <h3>
+                Yüzlerce projeye imzamızı attık.
+            </h3>
+        <p>
+            Ekibimizle imza attığımız projelerin. Başarılarında katkılarımızın olmasından gurur duyuyoruz.
+                    </p>
+                    <button><a href="projeler.html"> İşlerimiz</a></button>
+                </div>
+            
+        </div>
         
 
 
