--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,11 @@
     <title>HAKKIMIZDA</title>
     <link rel="stylesheet" href="stylehk.css">
 </head>
+
 <body>
     <header>
         <nav>
-           <div class="menu">
+            <div class="menu">
                 <ul>
                     <li><a href="index.html"> ANASAYFA</a></li>
                     <li><a href="hakkimizda.html"> HAKKIMIZDA</a></li>
@@ -18,9 +20,74 @@
                 </ul>
             </div>
         </nav>
-        <div class="slider"></div>
-        <div class="box">
-            
+        <div class="slider">
+            <SPAN> HAKKIMIZDA</SPAN>
+
+        </div>
+        <div class="content">
+            <p> Uys İş Güvenliği 1994 Yılında temelleri atılan firmamız önce Uludağ Yangın olarak satış ve imalata
+                başlamıştır. 2002 Yılında İŞ GÜVENLİĞİ MALZEMELERİ sektöründe özellikle Bursa’da eksiklerin olduğunu
+                gözlemleyerek geniş kapsamlı İş güvenliği malzemeleri satışı,iş elbiseleri ve iş güvenliği levhaları
+                üretim ve pazarlama ağlarıyla sektörde önemli bir yer almıştır.</p>
+
+
+           <p> Uys İş Güvenliği Ltd. Şti. firması ülkemizde geliştirilmesi gereken bir konu olan iş güvenliğini arttırmak
+            için alınabilecek ürünlerin satışını yapmaktadır. Firmamız farklı türden, çeşitten, renkten ve fiyattan
+            yüzlerce farklı ürünün satışını yapmaktadır. Özellikle iş güvenliği ve iş kıyafetleri üzerine kurulu olan
+            firmamızdan “İş güvenliği malzemeleri, İş elbiseleri, İş kıyafetleri, İş ayakkabıları, İş gözlükleri, İş
+            eldivenleri, İş güvenliği levhaları, Göz duşu, Gaz maskeleri” gibi birçok farklı çeşitteki ürünleri satın
+            alabilirsiniz. İnternet alışverişi için hiçbir kuşkunuz olmasın, çünkü güvenli bir şekilde alışveriş
+            yapmanız için ödemelerinizi yaparken 128 bit koruma ile yapmaktasınız. Uys İş Güvenliği malzemeleri Ltd.
+            Şti. imalatları yanı sıra Türkiye’de iş güvenliği malzemeleri anlamında isim yapmış kalitesini ispatlamış
+            firmaların bayiliklerini almış bulunmaktadır. Bölge bayilikleri bulunan firmalarımızın “Mekap iş
+            ayakkabıları Güney Marmara bölge bayiliği, Polly Boot Güney Marmara bölge bayiliği, Juba iş eldivenleri
+            Güney Marmara bölge bayiliği, Dunlop iş çizmeleri Güney Marmara bölge bayiliği” Gibi firmaların ürünlerini
+            web sitemizi ziyaret ederek kapıda ödeme, kredi kartı taksitli ödeme seçeneklerinden istifade ederek satın
+            alabilirsiniz.</p>
+
+            <p> İş güvenliği çok dikkat edilmesi gereken bir konu olduğundan bu konudaki alınacak ürünlerinde kalitelerine
+            dikkat edilmelidir. Bu ürünlerin kaliteli olmaması veya hatalı olması can kaybına kadar gidebilecek bir yola
+            uzanır. Bu yüzden aldığınız iş kıyafetlerinizin veya malzemeleriniz kaliteli markalar ve kaliteli firmalar
+            tarafından almaya özen göstermelisiniz. Uys firması da tam da anlattığımız firmalardan birisidir. Çünkü
+            gerek ithal edilen gerekse yerli markaların en kalitelilerinin satışını yapan firmamız İtalya, Fransa,
+            İspanya ve Japonya gibi ülkelerden de ürün ithal etmektedir. Uys firması üzerinden sadece iş elbiseleri ve
+            güvenlik malzemelerinin satışını yapmamaktadır ayrıca iş elbiseleri ve iş güvenliği levhalarının
+            imalatlarını da yapmaktadır. Bunu yaparken de bu sektördeki 20 yıllık tecrübelerini kullanan şirketimiz
+            gerçekten kaliteli ve son derece güvenilir ürünler ortaya çıkarmaktadır. İnternet sitemiz üzerinden
+            yapacağınız alışverişleriniz de kapıda ödeme ve kredi kartı ile ödeme yapabileceğiniz gibi PayPal sistemi
+            üzerinden de ödemenizi gerçekleştirebilirsiniz. Satın aldığınız ürünler kısa süre içinde kargoya
+            verileceğinden ürünleriniz minimum sürede elinize geçmiş olacaktır. Size verilen kargo numarası ile de
+            paketinizin devamlı olarak takibini yaparak nerede olduğunu görebileceksiniz. Bu sayede paketim neden geç
+            kaldı ve neden hala elime ulaşmadı gibi sorunlarla uğraşmayacaksınız. Yani sizleri sadece ürünler ile memnun
+            etmeyi değil ayrıca sitemiz üzerinden ürünleri satın alırken en rahat edeceğiniz şekilde bir düzen
+            hazırlamaya çalıştık. Bu sayede ürünlerinizi kolay, hızlı ve güvenilir bir şekilde alabilirsiniz. Yani,
+            firmamızdan kısaca bahsedecek olursak iş güvenliği ile ilgili elbiselerin satışını ve üretimini, iş
+            güvenliği ile ilgili levhaların satışını ve üretimini ve diğer iş güvenliğiyle ilgili malzemelerin satışının
+            yapıldığı, ödemenizi daha kolay yapmanız, ürününüze daha kolay kavuşmanız için gereken bütün önlemlerin
+            alındığı bir kuruştur. Ayrıca, kargo takip sistemi sayesinde sürekli olarak paketinizi takip etmenize
+            yardımcı olan ve son olarak sattığı ürünlerde 20 yıllık tecrübenin imzası olan iş güvenliği ile ilgili bir
+            kuruluştur. Bu kuruluş üzerinden güvenli ve hızlı bir şekilde alışveriş yapabilirsiniz. İş güvenliği ile
+            ilgili her alanda hizmet veren firmamız sürekli olarak hizmetinizdedir.</p>
+
+
+            <p> UYS İş Güvenliği, ülkemizde İş Sağlığı ve İş Güvenliği gibi bir kavramın henüz yaygın olmadığı zamanda bu
+            konuyu seçmiştir. Çünkü İş Sağlığı ve İş Güvenliği o kadar önemlidir ki bu işte her hangi bir materyal için
+            değil İNSAN YAŞAMI için çalışılmaktadır. Önce İş Güvenliği firmamızın vazgeçilemez ilkeleri arasındadır.
+            Firmamız çalışma alanı olarak insana hizmeti seçmiştir.</p>
+
+
+            <p> Ana Prensip OlarakUYS İŞ GÜVENLİĞİ işimizi personelimizi iş güvenliği alanında doğru ürün kaliteli malzemeyi
+            çalıştığımız firmalara sunabilmektir.</p>
+
+
+
+            <h6> Saygılarımızla</h6>
+
+
+
+            UYS İŞ GÜVENLİĞİ MALZEMELERİ VE YANGIN SÖN. SİST. LTD. ŞTİ.
+
+
         </div>
         <footer>
             ©Designed by Atill Öz
@@ -28,4 +95,5 @@
     </header>
 
 </body>
+
 </html>
