--- a/projeler.html
+++ b/projeler.html
@@ -22,12 +22,12 @@
         </nav>
         <div class="main">
         
-                <div class="box1"><img src="selection/1.png" alt=""></div>
-                <div class="box2"><img src="selection/2.png" alt=""></div>
-                <div class="box3"><img src="selection/3.png" alt=""></div>
-                <div class="box4"><img src="selection/4.png" alt=""></div>
-                <div class="box5"><img src="selection/5.png" alt=""></div>
-                <div class="box6"><img src="selection/6.png" alt=""></div>
+                <div class="box1"><a href="https://fatihoz5758.github.io/Tuna_isg" target="_blank"> <img src="selection/1.png" alt=""></a></div>
+                <div class="box2"><a href="https://fatihoz5758.github.io/meet" target="_blank"><img src="selection/2.png" alt=""></a></div>
+                <div class="box3"><a href="https://fatihoz5758.github.io/landing_web_site" target="_blank"><img src="selection/3.png" alt=""></a></div>
+                <div class="box4"><a href="https://fatihoz5758.github.io/site_cinema" target="_blank"><img src="selection/4.png" alt=""></a></div>
+                <div class="box5"><a href="https://fatihoz5758.github.io/Bootstrap01" target="_blank"><img src="selection/5.png" alt=""></a></div>
+                <div class="box6"><a href="https://fatihoz5758.github.io/devproject" target="_blank"><img src="selection/6.png" alt=""></a></div>
            
         </div>
         </div>
