--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -21,7 +21,7 @@
             </div>
         </nav>
         <div class="slider">
-            <SPAN> HAKKIMIZDA</SPAN>
+            <h1> HAKKIMIZDA</h1>
 
         </div>
         <div class="content">
